--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
     "@types/node": "^16.18.69",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
+    "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "http-proxy-middleware": "^2.0.6",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "react-toastify": "^9.1.3",
-    "sass": "^1.69.6",
+    "sass": "^1.69.7",
     "styled-components": "^6.1.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
