--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@types/node": "^16.18.69",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
+    "date-fns": "^3.3.1",
     "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "http-proxy-middleware": "^2.0.6",
+    "moment": "^2.30.1",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
+    "react-date-range": "^2.0.0-alpha.4",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.0.4",
@@ -59,6 +62,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-date-range": "^1.4.9",
     "tailwindcss": "^3.4.0"
   }
 }
