--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/node": "^16.18.69",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
+    "apexcharts": "^3.48.0",
+    "chart.js": "^4.4.2",
     "date-fns": "^3.3.1",
     "dayjs": "^1.11.10",
     "formik": "^2.4.5",
@@ -23,6 +25,8 @@
     "moment": "^2.30.1",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
+    "react-chartjs-2": "^5.2.0",
     "react-date-range": "^2.0.0-alpha.4",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^6.1.6",
